mobile view with issuese
podium is too close to the tournament-section

--- a/css/layout.css
+++ b/css/layout.css
@@ -90,46 +90,13 @@ main {
 }
 
 
-/*Gridlayout*/
-@media (max-width: 300px) {
-    main{
-        grid-template-columns: auto;
-        grid-template-rows: auto auto auto auto auto auto;
-        
-    }
-    
-    #description-section{
-        grid-column: 1;
-        grid-row: 1;
-    }
-    #requirements-section{
-        grid-column: 1;
-        grid-row: 2;
-    }
-    #registration-section {
-        grid-column: 1;
-        grid-row: 3;
-    }
-    #tournament-section{
-        grid-column: 1;
-        grid-row: 4;
-    }
-    #podium-section{
-        grid-column: 2;
-        grid-row: 5;
-    }
-    #history-section{
-        grid-column: 2;
-        grid-row: 6;
-    }
-
-} 
-
+ 
+/*Grid-layout for screen > 300px & < 600px (tablet-view)*/
 @media (min-width: 300px) and (max-width: 600px){
     main{ 
         grid-template-columns: auto;
         grid-template-rows: auto auto auto auto auto auto;
-        
+        gap: 1px;
     }
     
     #description-section{
@@ -158,39 +125,36 @@ main {
     }
 }
 
-@media only screen and (min-width: 300px) and (max-width: 600px){
-    main{
-        display: grid;
-        grid-template-columns: auto 1fr;
-        grid-template-rows: auto auto auto 1fr auto;
+/*Grid-layout for screen < 600px (mobile-view)*/
+@media (max-width: 300px) {
+    main{ 
+        grid-template-columns: auto;
+        grid-template-rows: auto auto auto auto auto auto;
+        gap: 1px;
     }
     
     #description-section{
-        grid-column: 1/-1;
+        grid-column: 1;
         grid-row: 1;
     }
     #requirements-section{
-        grid-column: 1/-1;
+        grid-column: 1;
         grid-row: 2;
     }
     #registration-section {
-        grid-column: 1/-1;
+        grid-column: 1;
         grid-row: 3;
     }
     #tournament-section{
         grid-column: 1;
-        grid-row: 4/6;
-    }
-    #podium-section{
-        grid-column: 2;
         grid-row: 4;
     }
-    #history-section{
-        grid-column: 2;
+    #podium-section{
+        grid-column: 1;
         grid-row: 5;
     }
-} 
-
-    
-
-
+    #history-section{
+        grid-column: 1;
+        grid-row: 6;
+    }
+}
